full-moon/tests/cases/fail/parser/stmt-after-return-1/source.lua
print("1")
return;
print("2")
